--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,8 +24,8 @@
         <activity
             android:name=".SearchActivity"
             android:label="@string/title_activity_search"
-            android:parentActivityName=".MainActivity"
-            android:theme="@style/AppTheme.NoActionBar">
+            android:parentActivityName=".MainActivity">
+            <!--android:theme="@style/AppTheme.NoActionBar">-->
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.uleth.flickrbrowser.MainActivity" />
@@ -34,7 +34,7 @@
 
             <intent-filter>
                 <action android:name="android.intent.action.SEARCH"/>
-               <!-- <action android:name="android.intent.action.MAIN" />
+                <!--<action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" /> -->
             </intent-filter>
