--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.uleth.flickrbrowser">
 
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.MEDIA_CONTENT_CONTROL" />
 
@@ -61,12 +61,12 @@
         <activity
             android:name=".UploadActivity"
             android:label="@string/title_activity_upload"
-
             android:parentActivityName=".MainActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.uleth.flickrbrowser.MainActivity" />
         </activity>
+        <activity android:name=".EditInfoActivity"></activity>
     </application>
 
 </manifest>
