--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -66,7 +66,14 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.uleth.flickrbrowser.MainActivity" />
         </activity>
-        <activity android:name=".EditInfoActivity"></activity>
+        <activity
+            android:name=".EditInfoActivity"
+            android:parentActivityName=".MainActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.uleth.flickrbrowser.UploadActivity" />
+
+        </activity>
     </application>
 
 </manifest>
